# porr-pso-mpi

./: CMakeLists.txt  main.cpp
Wykresy/: readlog.py
Wykresy/log_mpi_2d_task1/: particlesLog_p2_2595_2_0.001000_mc_1_a_MPI.txt
include/: ConfigEx1.h  ConfigEx2.h  Mc.h  McParticle.h  OptimizationExercisesConfig.h  OptimizationTask.h  OptimizationTask_1.h  OptimizationTask_2.h  Particle.h  Settings.h  monteCarlo.h  pso.h  psoPraticle.h  utils.h
src/: ConfigEx1.cpp  ConfigEx2.cpp  Mc.cpp  McParticle.cpp  OptimizationExercisesConfig.cpp  OptimizationTask_1.cpp  OptimizationTask_2.cpp  Particle.cpp  Settings.cpp  Utils.cpp  monteCarlo.cpp  pso.cpp  psoPraticle.cpp  utils.cpp
wykresy/MPI_PSO_T1/: readlog2.py
wykresy/log_mpi_2d_task1/: particlesLog_p0_3523_2_0.001000_mc_1_a_MPI.txt  particlesLog_p1_3928_2_0.001000_mc_1_a_MPI.txt  readlog2.py
wykresy/log_mpi_2d_task2/: particlesLog_p0_1003_2_0.001000_mc_2_a_MPI.txt  particlesLog_p1_2556_2_0.001000_mc_2_a_MPI.txt  particlesLog_p2_2486_2_0.001000_mc_2_a_MPI.txt  readlog2.py
